# ctrlX-refactored

./: .gitignore  README.md  alembic.ini  model_config.yaml  package-manifest.json  pyproject.toml  requirements-snap.txt  requirements.txt  snapcraft.yaml
alembic/: env.py
alembic/versions/: 93b5458cf92c_change_client_to_required_and_not_empty_.py  96efb20c7140_add_new_table_run.py  bca695b8dbea_cascade_by_db.py  cecbe72d3837_add_not_empty_contraints.py  d2aca3e90cf3_init_with_operationaldata.py  d42ed21f31b4_add_measuringpoint.py  e9b4793489d1_restructor_relations.py
app/: __init__.py  config.py  database.py  dto_models.py  dto_schema.py  main.py  models.py  update_message.py  utils.py
app/insight/: df_explorer.py  feature_plotter.py  model_plotter.py  ts_plotter.py
app/languages/: de.json  en.json
app/live_capture/: collector.py  datalayer.py
app/middleware/: auth_middleware.py
app/mqtt/: cycle_batch_collector.py  mqtt_client.py  prometheus_metrics.py  sync_database.py
app/multiprocessing/: read_zip.py
app/pipeline/: pipeline.py
app/routers/: api.py  htmx.py  live.py  logs.py  prometheus.py  user.py
app/scripts/: auth.py  data_visualization.py  database_helper.py  logging_summaries.py  mail.py  preprocessing_signal.py  report_service.py  select_features_auto.py  serialisation.py  tsa_logging.py  tsk_param.py
app/static/: htmx-path-prefix.js
app/templates/: admin.html  analytics.html  error.html  import.html  index.html  info.html  register.html  report.html  (+2 more)
snap/: snapcraft.yaml
test/: final_datalayer_api.py  trajectory_examples.py
(+49 files in other folders)
